# variational-autoencoder

./: .coveragerc  .travis.yml  README.md  autoencoder.py  checkpointing.py  create_animations.py  export_similar_training_images.py  model.py  pyproject.toml  train_vae.py  vae_loss.py
.github/workflows/: ci_tests.yml
scripts/: create_animations.py  export_similar_training_images.py
tests/: test_autoencoder.py  test_functional.py  test_model.py  test_train_vae.py  test_vae_loss.py
